--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/charts": "^7.13.2",
+    "@mantine/core": "^7.13.2",
+    "@mantine/dates": "^7.13.2",
+    "@mantine/hooks": "^7.13.2",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "recharts": "2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
