--- a/backend/package.json
+++ b/backend/package.json
@@ -2,19 +2,27 @@
   "name": "backend",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun run index.ts",
+    "start": "tsx watch index.ts"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.26.2",
+    "tsx": "^4.19.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
-  "scripts": {
-    "start": "nodemon index.ts"
-  },
   "dependencies": {
-    "@types/express": "^5.0.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.35.3",
     "express": "^4.21.0",
+    "node-postgres": "^0.6.2",
     "nodemon": "^3.1.7",
-    "pg": "^8.13.0"
+    "pg": "^8.13.1"
   }
 }
